# GhostRoutePanel

./: .gitignore  CMakeLists.txt  README.md  config.json
cli/: ghostroute.cpp
config/: panel.example.json  panel.json  panel.test.json
data/: schema.sql
include/ghostroute/: app.hpp  config.hpp  database.hpp  services.hpp  tenant_context.hpp  types.hpp
scripts/: install.sh  provision-hysteria.sh  provision-nginx.sh  provision-xray.sh  self-update.sh
src/: main.cpp
src/api/: placeholder.cpp
src/core/: app.cpp  config.cpp  database.cpp
src/services/: alert_service.cpp  analytics_service.cpp  geoip_service.cpp  health_service.cpp  hysteria_manager.cpp  provision_service.cpp  system_stats_service.cpp  xray_manager.cpp
src/tenant/: tenant_context.cpp
src/updater/: auto_updater.cpp
web/: index.html
web/css/: theme.css
web/js/: analytics.js  app.js
